2.5.0 - 2012xxxx
- More info in Seekbar for Music Videos.
- Make auto-scroll speed for textboxes adjustable.
- Minor cosmetic fixups.
- Allow ClearArt in Logo viewtype.
- Show Music Video thumbnail in OSD.
- Fallback images for HomeDeck items.
- Support for Skin Widgets service addon.
- Add option to prefer Landscape over Fanart.
- Support for Artwork Downloader 12.x (Frodo compatible).
- Fix text alignment issues in Frodo.
- Support for ListItem.Art(banner).
- Support for Advanced Media Filter.
- Replace Get Thumb and Get Fanart in Video Info Dialog with Choose Art.
- Tags submenu item in Movies.
- Option to hide addons not in user's native tongue.

2.0.0 - 20121105
- Add shuttle controls in PVR OSD.
- Fix Episode counts in all views.
- Update fonts.
- New icons for Addons, LiveTV, and Games.
- Option to show Clean Library in Videos and Music SubMenus.
- New Music Genre icons.
- New Movie Genre icons.
- Add option to show Plot or Director/Genre in Fullscreen Info.
- Fix occasional hang in Fullscreen Info.
- Hide Media Totals for media types that have no items in library.
- Advanced Launcher integration.
- Add Games to Home main menu.
- Music Visualiser options: Fanart, Extra Fanart, Artist_Slideshow, or None.
- Use Realistic Weather Icons on global overlay as well (if configured).
- Add IMDb Top250 Media Flag.
- Clean up VideoInfo dialog for Music Videos.
- Option to limit Shutdown submenu to non-destructive operations only.
- Add Reboot item to Shutdown submenu.
- More Music Genre icons.
- Option to hide all Media Flags.
- Clean up PictureGrid view type.
- Customization options for Home items.
- Customizable submenu items for most Home items.
- Move Music Videos to Home main menu.
- PVR support.
- Major rework of Music section.
- Adjust Music Fullscreen Overlay.
- Clean up animations.
- Show sort letter popup when scrolling through lists quickly.
- Option to hide global clock.
- Rework Skin Settings.
- Icon shortcuts for Addons Home item.