@@ -1,5 +1,5 @@
 ﻿<window id="40">
-	<views>55,905</views>
+	<views>55,905,58,559</views>
 	<defaultcontrol always="true">55</defaultcontrol>
 	<allowoverlay>yes</allowoverlay>
 	<controls>
@@ -13,6 +13,8 @@
 		</control>
 		<include>Viewtype_Files</include>
 		<include>Viewtype_LowList</include>
+		<include>Viewtype_Gallery_Square</include>
+		<include>Viewtype_Panel_Square</include>
 		<include>Global_ContextFilter</include>
 		<include>Global_AddonInfo</include>
 		<include>Global_ScrollOffsetLabel</include>
