@@ -1,7 +1,7 @@
 ﻿<window id="25">
 	<onload condition="Skin.HasSetting(TvTunes) + !SubString(Window(Videos).Property(CinemaExperienceRunning),True)">RunScript(script.tvtunes,backend=True&amp;loop=False)</onload>
 	<onload condition="Skin.HasSetting(NextAired) + !SubString(Window(Videos).Property(CinemaExperienceRunning),True) + [Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes)]">RunScript(script.tv.show.next.aired,backend=True)</onload>
-	<views>55,905,503,54,58,59,53,57,551,550,504,509,511,508,510,52,56,512,501</views>
+	<views>55,905,503,54,58,59,559,53,57,551,550,504,509,511,508,510,52,56,512,501</views>
 	<defaultcontrol always="true">55</defaultcontrol>
 	<allowoverlay>yes</allowoverlay>
 	<controls>
@@ -37,24 +37,25 @@
 			<visible>!Skin.HasSetting(HideVideoFanart) + !IsEmpty(ListItem.path) + [Container.Content(seasons) | [Container.Content(episodes) + !stringcompare(Container.FolderPath,videodb://5/)]]</visible>
 		</control>
 		<include>Object_InfoLines</include>
-		<include>Viewtype_LowList</include>				<!-- 905 -->
-		<include>Viewtype_Files</include>				<!-- 55 -->
+		<include>Viewtype_LowList</include>			<!-- 905 -->
+		<include>Viewtype_Files</include>			<!-- 55 -->
 		<include>Viewtype_Poster_Fixed</include>		<!-- 53 -->
 		<include>Viewtype_Poster_Wrap</include>			<!-- 57 -->
 		<include>Viewtype_PosterAndFanart</include>		<!-- 550 -->
 		<include>Viewtype_Poster_Large</include>		<!-- 551 -->
 		<include>Viewtype_Coverflow</include>			<!-- 512 -->
 		<include>Viewtype_Landscape</include>			<!-- 52 -->
-		<include>Viewtype_List</include>				<!-- 503 -->
-		<include>Viewtype_Fanart</include>				<!-- 504 -->
+		<include>Viewtype_List</include>			<!-- 503 -->
+		<include>Viewtype_Fanart</include>			<!-- 504 -->
 		<include>Viewtype_FanartList</include>			<!-- 509 -->
 		<include>Viewtype_FanartBanner</include>		<!-- 508 -->
-		<include>Viewtype_Banner</include>				<!-- 511 -->
+		<include>Viewtype_Banner</include>			<!-- 511 -->
 		<include>Viewtype_BannerPoster</include>		<!-- 510 -->
-		<include>Viewtype_Gallery</include>				<!-- 54 -->
+		<include>Viewtype_Gallery</include>			<!-- 54 -->
 		<include>Viewtype_Gallery_Fanart</include>		<!-- 59 -->
 		<include>Viewtype_Gallery_Square</include>		<!-- 58 -->
-		<include>Viewtype_Logo</include>				<!-- 56 -->
+		<include>Viewtype_Panel_Square</include>		<!-- 559 -->
+		<include>Viewtype_Logo</include>			<!-- 56 -->
 		<include>Viewtype_TallGenre</include>			<!-- 501 -->
 		<include>Global_ContextFilter</include>
 		<include condition="!Skin.HasSetting(Hide_MediaFlags)">MediaInfo</include>
