@@ -21,7 +21,7 @@
 				<include>Animation_FadedByMenu</include>
 				<include>Animation_HiddenByInfo</include>
 				<visible>!Skin.HasSetting(NoViewGallerySquare)</visible>
-				<visible>Window.IsActive(programs) | Window.IsActive(videofiles) | Container.Content(Addons) | Container.Content(Albums) | Container.Content(Artists)</visible>
+				<visible>Window.IsActive(pictures) | Window.IsActive(programs) | Window.IsActive(videofiles) | Container.Content(Addons) | Container.Content(Albums) | Container.Content(Artists)</visible>
 				<itemlayout width="205" height="205">
 					<control type="image">
 						<posx>25</posx>
@@ -50,36 +50,34 @@
 					</control>
 				</itemlayout>
 				<focusedlayout width="205" height="205">
-					<control type="image">
-						<posx>25</posx>
-						<posy>25</posy>
-						<width>155</width>
-						<height>155</height>
-						<texture>frames/ClassicFrame_Background.png</texture>
-						<colordiffuse>FrameBackgroundDiffuse</colordiffuse>
+					<control type="group">
 						<animation reversible="false" effect="zoom" center="auto" start="100" end="120" time="200" tween="sine" easing="inout">focus</animation>
 						<animation reversible="false" effect="zoom" center="auto" start="120" end="100" time="200" tween="sine" easing="inout">unfocus</animation>
-						<visible>!substring(ListItem.Icon,default)</visible>
-					</control>
-					<control type="image">
-						<posx>25</posx>
-						<posy>25</posy>
-						<width>155</width>
-						<height>155</height>
-						<texture background="true" fallback="DefaultThumb.png">$INFO[ListItem.Icon]</texture>
-						<aspectratio scalediffuse="false">stretch</aspectratio>
-						<animation reversible="false" effect="zoom" center="auto" start="100" end="120" time="200" tween="sine" easing="inout">focus</animation>
-						<animation reversible="false" effect="zoom" center="auto" start="120" end="100" time="200" tween="sine" easing="inout">unfocus</animation>
-					</control>
-					<control type="image">
-						<posx>5</posx>
-						<posy>2</posy>
-						<width>195</width>
-						<height>197</height>
-						<texture>frames/ClassicFrame_SquareSmall.png</texture>
-						<animation reversible="false" effect="zoom" center="auto" start="100" end="120" time="200" tween="sine" easing="inout">focus</animation>
-						<animation reversible="false" effect="zoom" center="auto" start="120" end="100" time="200" tween="sine" easing="inout">unfocus</animation>
-						<visible>!substring(ListItem.Icon,default)</visible>
+						<control type="image">
+							<posx>25</posx>
+							<posy>25</posy>
+							<width>155</width>
+							<height>155</height>
+							<texture>frames/ClassicFrame_Background.png</texture>
+							<colordiffuse>FrameBackgroundDiffuse</colordiffuse>
+							<visible>!substring(ListItem.Icon,default)</visible>
+						</control>
+						<control type="image">
+							<posx>25</posx>
+							<posy>25</posy>
+							<width>155</width>
+							<height>155</height>
+							<texture background="true" fallback="DefaultThumb.png">$INFO[ListItem.Icon]</texture>
+							<aspectratio scalediffuse="false">stretch</aspectratio>
+						</control>
+						<control type="image">
+							<posx>5</posx>
+							<posy>2</posy>
+							<width>195</width>
+							<height>197</height>
+							<texture>frames/ClassicFrame_SquareSmall.png</texture>
+							<visible>!substring(ListItem.Icon,default)</visible>
+						</control>
 					</control>
 				</focusedlayout>
 			</control>
@@ -88,64 +86,28 @@
 				<include>Animation_OpenCloseFade</include>
 				<include>Animation_FadedByMenu</include>
 				<include>Animation_HiddenByInfo</include>
-				<visible>Window.IsActive(programs) | Window.IsActive(videofiles) | Container.Content(Addons) | Container.Content(Albums) | Container.Content(Artists)</visible>
+				<posx>40</posx>
+				<posy>495</posy>
 				<!-- Title -->
-				<control type="grouplist">
-					<posx>40</posx>
-					<posy>495</posy>
+				<control type="label">
 					<width>1208</width>
 					<height>30</height>
 					<align>center</align>
-					<itemgap>10</itemgap>
-					<orientation>horizontal</orientation>
-					<!-- Artist -->
-					<control type="label">
-						<width min="25" max="600">auto</width>
-						<height>30</height>
-						<aligny>center</aligny>
-						<font>METF_TitleTextLarge</font>
-						<textcolor>TitleText</textcolor>
-						<label>$INFO[ListItem.Label2]</label>
-						<visible>!IsEmpty(ListItem.Label2)</visible>
-					</control>
-					<!-- Bullet -->
-					<control type="image">
-						<width>8</width>
-						<height>32</height>
-						<texture>Dot.png</texture>
-						<aspectratio align="center" aligny="center">keep</aspectratio>
-						<colordiffuse>BulletDiffuse</colordiffuse>
-						<visible>![IsEmpty(ListItem.Label2) | IsEmpty(ListItem.Label)]</visible>
-					</control>
-					<!-- Album -->
-					<control type="label">
-						<width min="25" max="600">auto</width>
-						<height>30</height>
-						<aligny>center</aligny>
-						<font>METF_TitleTextLarge</font>
-						<textcolor>TitleText</textcolor>
-						<label>$INFO[ListItem.Label]</label>
-						<visible>!IsEmpty(ListItem.Label)</visible>
-					</control>
+					<aligny>center</aligny>
+					<font>METF_TitleTextLarge</font>
+					<textcolor>TitleText</textcolor>
+					<label>$INFO[ListItem.Label]$INFO[ListItem.Label2, - ]</label>
+					<visible>!Window.IsActive(pictures)</visible>
 				</control>
-				<!-- Arrows -->
-				<control type="image">
-					<posx>10</posx>
-					<posy>508</posy>
-					<width>24</width>
-					<height>24</height>
-					<texture>Arrow2Up.png</texture>
-					<colordiffuse>ArrowDiffuse</colordiffuse>
-					<visible>Container.HasPrevious</visible>
-				</control>
-				<control type="image">
-					<posx>1246</posx>
-					<posy>508</posy>
-					<width>24</width>
-					<height>24</height>
-					<texture>Arrow2Down.png</texture>
-					<colordiffuse>ArrowDiffuse</colordiffuse>
-					<visible>Container.HasNext</visible>
+				<control type="label">
+					<width>1208</width>
+					<height>30</height>
+					<align>center</align>
+					<aligny>center</aligny>
+					<font>METF_TitleTextLarge</font>
+					<textcolor>TitleText</textcolor>
+					<label>$INFO[ListItem.Label]</label>
+					<visible>Window.IsActive(pictures)</visible>
 				</control>
 			</control>
 			<include>ScrollBar_Vertical</include>
